# app-challenge

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  routes.py  schemas.py  utils.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  api.ts
frontend/src/components/: AddFiles.tsx  ListAnswers.tsx
mongodb/: Dockerfile
