[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["luna215 <paulluna0215@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2 = "^2.9.9"
pdf2image = "^1.17.0"
pytesseract = "^0.3.10"
nltk = "^3.8.1"
transformers = "^4.40.2"
torch = "^2.3.0"
pymongo = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
